# ArkanoidWithoutAnEngine

./: .gitattributes  .gitignore  ArkanoidWithoutAnEngine.sln  BUILD.md  CMakeLists.txt  README.md  main.c
ArkanoidWithoutAnEngine/: ArkanoidWithoutAnEngine.cpp  ArkanoidWithoutAnEngine.rc  ArkanoidWithoutAnEngine.vcxproj  ArkanoidWithoutAnEngine.vcxproj.DotSettings  ArkanoidWithoutAnEngine.vcxproj.filters  resource.h
ArkanoidWithoutAnEngine/Engine/: Engine.cpp  Engine.h
ArkanoidWithoutAnEngine/EntryPoint/: Main.cpp  Main.h
ArkanoidWithoutAnEngine/EntryPoint/Application/: Application.cpp  Application.h
ArkanoidWithoutAnEngine/Game/: Game.cpp  Game.h
ArkanoidWithoutAnEngine/Game/Converters/: Converters.cpp  Converters.h
ArkanoidWithoutAnEngine/Game/Input/: KeyType.h
ArkanoidWithoutAnEngine/Game/Levels/: Levels.cpp  Levels.h
ArkanoidWithoutAnEngine/Game/Shortcuts/: Shortcuts.cpp  Shortcuts.h
ArkanoidWithoutAnEngine/Game/View/: VisualizationConsts.h
ArkanoidWithoutAnEngine/core/: ArkanoidWithoutAnEngine.rc
ArkanoidWithoutAnEngine/core/includes/: framework.h
ArkanoidWithoutAnEngine/entry_point/: main.cpp
ArkanoidWithoutAnEngine/entry_point/application/: application.cpp  application.h  window_factory.cpp  window_factory.h  window_processor.cpp  window_processor.h
ArkanoidWithoutAnEngine/game/: game.cpp  game.h
ArkanoidWithoutAnEngine/game/converters/: converters.cpp  converters.h
ArkanoidWithoutAnEngine/game/input/: input.cpp  input.h  key_type.h
ArkanoidWithoutAnEngine/game/level/: level_view.cpp
ArkanoidWithoutAnEngine/game/levels/: levels.cpp  levels.h
ArkanoidWithoutAnEngine/game/loop/: game_loop.cpp  game_loop.h
ArkanoidWithoutAnEngine/game/platform/: PlatformController.cpp  PlatformController.h
ArkanoidWithoutAnEngine/game/rendering/: screen_applier.cpp  screen_applier.h  screen_cleaner.cpp
ArkanoidWithoutAnEngine/game/shortcuts/: render_packs.cpp  render_packs.h  shortcuts.cpp  shortcuts.h
ArkanoidWithoutAnEngine/game/view/: screen_applier.cpp  screen_cleaner.cpp  visualization_consts.h
include/engine/events/: application_events.hpp
include/engine/loop/: game_loop.hpp
include/engine/math/: vector2.hpp
include/engine/physics/: physical_properties.hpp  physics_object.hpp  physics_simulation.hpp
include/engine/rendering/: rendering_constants.hpp  screen_applier.hpp  screen_cleaner.hpp  window_references.hpp
include/entry_point/: application.hpp
include/game/: game.hpp
include/game/ball/: ball.hpp  ball_view.hpp
include/game/events/: application_events.hpp
include/game/level/: brick.hpp  brick_type.hpp  level.hpp  level_layouts.hpp  level_map.hpp  level_view.hpp
include/game/loop/: game_loop.hpp
include/game/math/: vector2.hpp
include/game/physics/: physical_properties.hpp  physics_object.hpp  physics_simulation.hpp  test_object.hpp
include/game/platform/: platform.hpp  platform_controller.hpp  platform_view.hpp
include/game/rendering/: rendering_constants.hpp  screen_applier.hpp  screen_cleaner.hpp  window_references.hpp
include/game/root/: game.hpp  level_factory.hpp  wall_factory.hpp
include/game/shortcuts/: render_colors.hpp  shortcuts.hpp
include/game/wall/: wall.hpp  (+1 more)
include/tools/: shared_pointer.hpp
source/entry_point/: main.cpp  main.h
source/game/: game.cpp  game.h
src/entry_point/: application.cpp  main.cpp
src/game/: game.cpp  game.hpp
src/tools/: shared_pointer.hpp
(+360 files in other folders)
